--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,41 +1,12 @@
 <header class="bg-dark text-white p-3 header-with-shadow">
   <div class="div-header">
     <i class="fas fa-car fa-2x"></i>
-    <h1 class="my-0">Estacionamento Carro Seguro</h1>
+    <h1 class="my-0">Estacionamento Segurança Total</h1>
   </div>
-
 </header>
 
-<div class="container">
+<main class="row" style="width: 100%; align-items: start;">
+  <app-cadastro-editar class="col-6"></app-cadastro-editar>
+  <app-tabela class="col-6"></app-tabela>
+</main>
 
-  <table class="table table-striped mt-4">
-    <thead>
-      <tr>
-        <th scope="col">Código</th>
-        <th scope="col">Modelo</th>
-        <th scope="col">Cor</th>
-        <th scope="col">Placa</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let car of cars">
-        <th scope="row">{{ car.codigo }}</th>
-        <td>{{ car.modelo }}</td>
-        <td>{{ car.cor }}</td>
-        <td>{{ car.placa }}</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="d-flex justify-content-between p-2">
-    <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize"
-      (pageChange)="refreshCars()">
-    </ngb-pagination>
-
-    <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshCars()">
-      <option [ngValue]="2">2 itens por página</option>
-      <option [ngValue]="4">4 itens por página</option>
-      <option [ngValue]="6">6 itens por página</option>
-    </select>
-  </div>
-</div>
