--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,11 @@
 </header>
 
 <main class="row" style="width: 100%; align-items: start;">
-  <app-cadastro-editar class="col-6"></app-cadastro-editar>
+  <app-cadastro-editar class="col-6"  style="border-right: 1px solid #ccc; padding-right: 15px;"></app-cadastro-editar>
   <app-tabela class="col-6"></app-tabela>
 </main>
 
+
+<footer>
+  &copy; 2023 Thaís Alencar. Todos os direitos reservados.
+</footer>
