feature: add botao deletar e modal

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,8 +6,8 @@
 </header>
 
 <main class="row" style="width: 100%; align-items: start;">
-  <app-cadastro-editar class="col-6"  style="border-right: 1px solid #ccc; padding-right: 15px;"></app-cadastro-editar>
-  <app-tabela class="col-6"></app-tabela>
+  <app-cadastro-editar class="col-4"  style="border-right: 1px solid #ccc; padding-right: 15px;" [veiculos]="veiculos" (veiculoCadastradoAlterado)="veiculoCadastradoAlterado($event)"></app-cadastro-editar>
+  <app-tabela class="col-8" [veiculos]="veiculos"></app-tabela>
 </main>
 
 
