--- a/frontend/src/app/components/cadastro-editar/cadastro-editar.component.html
+++ b/frontend/src/app/components/cadastro-editar/cadastro-editar.component.html
@@ -1,10 +1,10 @@
 <mat-tab-group>
     <mat-tab label="Cadastrar Veículo">
 
-        <form class="row" style="width: 100%; padding-top: 2rem;">
+        <form [formGroup]="formularioCadastro" class="row" style="width: 100%; padding-top: 2rem;">
 
             <div class="form-group col-6">Tipo:
-                <select class="form-select">
+                <select class="form-select"  formControlName="tipo">
                     <option value="null">- Selecione - </option>
                     <option value="carro">Carro</option>
                     <option value="motocicleta">Motocicleta</option>
@@ -13,21 +13,21 @@
 
             <div class="form-group col-6">
                 <label for="modelo">Modelo:</label>
-                <input type="text" class="form-control" id="modelo">
+                <input type="text" class="form-control" id="modelo" formControlName="modelo">
             </div>
 
             <div class="form-group col-6">
                 <label for="placa">Placa:</label>
-                <input type="text" class="form-control" id="placa">
+                <input type="text" class="form-control" id="placa" formControlName="placa">
             </div>
 
             <div class="form-group col-6">
                 <label for="cor">Cor:</label>
-                <input type="text" class="form-control" id="cor">
+                <input type="text" class="form-control" id="cor" formControlName="cor">
             </div>
 
             <div class="col-12" style="margin-top: 2rem; display: flex; justify-content: flex-end;">
-                <button type="submit" class="btn btn-dark">Cadastrar</button>
+                <button type="button" class="btn btn-dark" (click)="cadastrarVeiculo(formularioCadastro.value)">Cadastrar</button>
             </div>
 
 
@@ -38,9 +38,9 @@
 
             <div class="form-group col-12">Código do Veículo:
                 <select class="form-select">
-                    <option value="null">- Selecione - </option>
-                    <option value="carro">Carro</option>
-                    <option value="motocicleta">Motocicleta</option>
+                    <option *ngFor="let veiculo of veiculos" [value]="veiculo.codigo">
+                        {{veiculo.codigo}}
+                    </option>
                 </select>
             </div>
 
