--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
 <main class="row" style="width: 100%; align-items: start;">
 
 
-  <app-cadastro-editar class="col-4" style="border-right: 1px solid #ccc; padding-right: 15px; height: 80vh;" [veiculos]="veiculos"
+  <app-cadastro-editar class="col-4" style="border-right: 1px solid #ccc; padding-right: 15px; height: 80vh;" [ehPesquisaInput]="ehPesquisaInput" [veiculos]="veiculos"
     (veiculoCadastradoAlterado)="veiculoCadastradoAlterado($event)"></app-cadastro-editar>
 
   <div class="col-8" style="height: 80vh;">
@@ -18,7 +18,7 @@
       <input type="number" class="form-control" placeholder="Pesquisar por código..."
         style="width: auto; margin-left: .5rem;" #codigoVeiculo (keyup)="buscarVeiculo(codigoVeiculo.value)">
     </div>
-    <app-tabela  [veiculos]="veiculos"></app-tabela>
+    <app-tabela  [veiculos]="veiculos" [ehInclusaoVeiculo]="ehInclusaoVeiculo"></app-tabela>
   </div>
 
 </main>
