--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
 
 
   <app-cadastro-editar class="col-4" style="border-right: 1px solid #ccc; padding-right: 15px; height: 80vh;" [ehPesquisaInput]="ehPesquisaInput" [veiculos]="veiculos"
-    (veiculoCadastradoAlterado)="veiculoCadastradoAlterado($event)"></app-cadastro-editar>
+    (veiculoCadastrado)="veiculoCadastrado($event)"  (veiculoAlterado)="veiculoAlterado($event)"></app-cadastro-editar>
 
   <div class="col-8" style="height: 80vh;">
     <div class="form-group col-12" style="display: flex; justify-content: flex-end; margin-bottom: 1rem; align-items: center;">
@@ -18,7 +18,7 @@
       <input type="number" class="form-control" placeholder="Pesquisar por código..."
         style="width: auto; margin-left: .5rem;" #codigoVeiculo (keyup)="buscarVeiculo(codigoVeiculo.value)">
     </div>
-    <app-tabela  [veiculos]="veiculos" [ehInclusaoVeiculo]="ehInclusaoVeiculo"></app-tabela>
+    <app-tabela  [veiculos]="veiculos" [ehInclusaoVeiculo]="ehInclusaoVeiculo" (veiculoDeletado)="veiculoDeletado($event)"></app-tabela>
   </div>
 
 </main>
