feature: ajustes finais

--- a/frontend/src/app/components/tabela/tabela.component.html
+++ b/frontend/src/app/components/tabela/tabela.component.html
@@ -16,7 +16,8 @@
             <td>{{veiculo.modelo}}</td>
             <td>{{veiculo.placa}}</td>
             <td>{{veiculo.cor}}</td>
-            <td style="text-align: center;"> <mat-icon class="text-danger"  style="cursor: pointer;" (click)="openDialog(veiculo)">delete</mat-icon></td>
+            <td> <mat-icon class="text-danger" style="cursor: pointer; margin-left: 8px;"
+                    (click)="openDialog(veiculo)">delete</mat-icon></td>
         </tr>
     </tbody>
 
